--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "jpeg-js": "^0.3.4",
     "node-fetch": "^2.3.0",
     "pngjs": "^3.4.0"
   }
